Some work on the Facade
Split up communication between Main & PrinterManager

Now PrinterManager has to be a Getter & Setter essentially, while the Facade does all the logic

Ideally the Main should really only print to the user while the Facade handles all the logic and passing information on to the Printer Manager